kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  labels:
    app: react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: yashmehta07/react:latest
        ports:
          - containerPort: 3000
          
---

apiVersion: v1
kind: Service
metadata:
  name: react
spec:
  type: NodePort
  selector:
    app: react
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 3000
    nodePort: 30001
